<resources>
    <string name="app_name">Embracing The Spectrum: A Parent Journal.</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



    <!--Common-->
    <string name="please_wait">Please wait</string>
    <string name="dashboard">Dashboard</string>


    <!-- Strings used for fragments for navigation -->
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="signup_fragment_label">Signup Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="fragment_forgot_password_label">ForgotPassword Fragment</string>
    <string name="dashboard_fragment_label">Dashboard Fragment</string>
    <string name="dashboard_menu_fragment_label">Dashboard Menu Fragment</string>
    <string name="webView_fragment_label">Dashboard Fragment</string>
    <string name="detail_fragment_label">Detail Fragment</string>



    <!-- Login -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="orLoginWith">Or Login With</string>
    <string name="signup_text">Do not have Account?</string>
    <string name="register_now_text"> Register Now</string>
    <string name="email_hint">Email<font color='#1C0647'>*</font></string>
    <string name="is_adult_hint">Are you Adult?<font color='#1C0647'>*</font></string>

    <string name="option_gallery">Gallery</string>
    <string name="option_camera">Camera</string>

    <!-- Login Validation -->
    <string name="email_validation"> Please enter your Email address</string>
    <string name="email_valid_validation"> Please enter your valid Email address</string>
    <string name="password_validation"> Please enter your Password</string>
    <string name="password_valid_validation"> Please enter password character more than 3</string>
    <string name="confirm_password_validation"> New Password and Confirm Password does not match</string>
    <string name="adult_validation"> Please Select Yes for Adult</string>

    <!-- Register Validation -->
    <string name="fullName_validation"> Please enter your Full Name</string>


    <!-- OTP Validation -->
    <string name="otp_validation"> Please enter OTP</string>
    <string name="otp_not_match_validation">OTP does not match</string>

    <!-- Reset Password -->
    <string name="resetPassword">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="reset_password_label">Reset Password Fragment</string>


    <!-- Register -->
    <string name="register">Register</string>
    <string name="fullName">Full Name</string>
    <string name="already_have_account_text">Already have Account?</string>
    <string name="back_to_login">Back to</string>
    <string name="login_now_text"> Login Now</string>
    <string name="fullName_hint">Full Name<font color='#1C0647'>*</font></string>
    <string name="password_hint">Password<font color='#1C0647'>*</font></string>

    <!-- Coming Soon -->
    <string name="coming_soon">Coming Soon..</string>


    <!-- My Profile -->
    <string name="my_profile">My Profile</string>
    <string name="update">Update</string>


    <!-- Forgot Password -->
    <string name="forgot_password_text">Forgot Password</string>


    <string name="double_quote">\"</string>

    <!-- Change Password -->
    <string name="change_password_text">Change Password</string>
    <string name="old_password_text">Old Password <font color='#1C0647'>*</font></string>
    <string name="new_password_text">New Password <font color='#1C0647'>*</font></string>
    <string name="confirm_password_text">Confirm Password <font color='#1C0647'>*</font></string>
    <string name="change_password_label">Change Password Fragment</string>

    <string name="change_password_hint">Change Password</string>
    <string name="old_password_hint">Old Password </string>
    <string name="new_password_hint">New Password </string>
    <string name="confirm_password_hint">Confirm Password </string>

    <!-- OTP Password -->
    <string name="otp_verification_label">OTP Verification</string>
    <string name="otp_label">OTP</string>
    <string name="old_password_validation"> Please enter your Old Password</string>
    <string name="new_password_validation"> Please enter your New Password</string>

    <string name="gratitude_label">Gratitude</string>

    <string name="my_profile_label">My Profile</string>


    <string name="app_font_bold">roboto_bold.ttf</string>
    <string name="app_font_medium">roboto_medium.ttf</string>
    <string name="app_font_regular">roboto_regular.ttf</string>
    <string name="app_font_thin">roboto_thin.ttf</string>
    <string name="app_font_light">roboto_light.ttf</string>


    <string name="employeecode">Employee Code</string>


    <!--    No Internet Connection Message -->
    <string name="nointernetconnection">Local network problem, please check your network</string>


    <string name="logoutAlert">Are you sure want to Logout?</string>


    <string name="enter_your_ans">Enter your answer..</string>
    <string name="enter_your_gratitude">Please enter gratitude</string>

    <string name="session_expired">Session Expired</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string name="server_client_id">AIzaSyBoD5scdG-kPGWhOGERu96N0BWvPceipjQ</string>
    <string name="facebook_app_id">495608067455933</string>


    <string name="didntreceiveotp">Did not receive OTP?</string>
    <string name="resend">Resend OTP</string>

    <string name="adult_msg_validation">Must be 18 years and older to access this application.</string>

    <!-- Analytics -->
    <string name="general_entries">Journal \n Entries</string>
    <string name="my_trends">My Trends</string>
    <string name="general_entries_label">General Entries</string>


    <string name="text_with_bullet">\u2022</string>


    <string name="lorem_ipsum">
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

    The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
    </string>
</resources>