<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_grpah_pickford"
    app:startDestination="@+id/dashboardMenuFragment">


    <fragment
        android:id="@+id/dashboardMenuFragment"
        android:name="com.app.dailyjounral.view.DashboardMenuFragment"
        android:label="@string/dashboard_menu_fragment_label"
        app:popUpToInclusive="true"
        app:destination="@id/dashboardFragment"
        tools:layout="@layout/dashboard_menu_fragment">

        <action
            android:id="@+id/action_dashboardMenuFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/dashboardMenuFragment"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.app.secureglobal.view.menu.DashboardFragment"
        android:label="@string/dashboard_fragment_label"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="false"
        tools:layout="@layout/dashboard_fragment">

        <action
            android:id="@+id/action_dashboardFragment_to_dashboardMenuFragment"
            app:destination="@id/dashboardMenuFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/dashboardFragment"
            app:popUpToInclusive="true"/>

    </fragment>


    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.app.dailyjounral.view.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/home_fragment">
    </fragment>



</navigation>