<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashScreen">


    <fragment
        android:id="@+id/SplashScreen"
        android:name="com.app.dailyjounral.view.SplashScreen"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/splashscreen">

        <action
            android:id="@+id/action_SplashScreen_to_LoginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/anim_slide_in_from_bottom"
            app:popExitAnim="@anim/anim_slide_out_to_bottom"
            app:destination="@id/LoginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_SplashScreen_to_HomeFragment"
            app:destination="@id/HomeFragment" />

    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.app.dailyjounral.view.fragment.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/anim_slide_in_from_bottom"
        app:popExitAnim="@anim/anim_slide_out_to_bottom">


    </fragment>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.app.dailyjounral.view.fragment.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">


    </fragment>

</navigation>