<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.app.dailyjounral.viewmodel.ChangePasswordViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20ssp"
        android:layout_marginEnd="@dimen/_10ssp"
        android:layout_marginStart="@dimen/_15ssp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16ssp"
                android:layout_marginEnd="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

                <com.app.dailyjounral.widget.RobotoRegularText
                    android:id="@+id/tvSignupLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/change_password_text"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.app.dailyjounral.widget.RobotoRegularText
                    android:id="@+id/tvSignupLabelContinue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="sign_in_continue"
                    android:textColor="@color/gray_616161"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignupLabel" />


                <com.app.dailyjounral.widget.RobotoRegularText
                    android:id="@+id/oldPasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/old_password_text"
                    android:layout_marginTop="@dimen/_20ssp"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignupLabel">

                </com.app.dailyjounral.widget.RobotoRegularText>

                <com.app.dailyjounral.widget.TypefaceEditText
                    android:id="@+id/edt_OldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password_text"
                    android:textSize="@dimen/_12ssp"
                    android:drawableTint="@color/top_header_color"
                    android:background="@drawable/round_shape_edittext"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/icon_lock"
                    android:paddingStart="@dimen/_10ssp"
                    android:drawablePadding="@dimen/_10ssp"
                    android:padding="@dimen/_8ssp"
                    android:layout_marginTop="@dimen/_5ssp"
                    app:layout_constraintTop_toBottomOf="@+id/oldPasswordLabel"
                    tools:ignore="RtlSymmetry">

                </com.app.dailyjounral.widget.TypefaceEditText>

                <com.app.dailyjounral.widget.RobotoRegularText
                    android:id="@+id/NewPasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password_text"
                    android:layout_marginTop="@dimen/_20ssp"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/edt_OldPassword">

                </com.app.dailyjounral.widget.RobotoRegularText>

                <com.app.dailyjounral.widget.TypefaceEditText
                    android:id="@+id/edt_NewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password_text"
                    android:textSize="@dimen/_12ssp"
                    android:drawableTint="@color/top_header_color"
                    android:background="@drawable/round_shape_edittext"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/icon_lock"
                    android:paddingStart="@dimen/_10ssp"
                    android:drawablePadding="@dimen/_10ssp"
                    android:padding="@dimen/_8ssp"
                    android:layout_marginTop="@dimen/_5ssp"
                    app:layout_constraintTop_toBottomOf="@+id/NewPasswordLabel"
                    tools:ignore="RtlSymmetry">

                </com.app.dailyjounral.widget.TypefaceEditText>


                <com.app.dailyjounral.widget.RobotoRegularText
                    android:id="@+id/ConfirmPasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password_text"
                    android:layout_marginTop="@dimen/_20ssp"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/edt_NewPassword">

                </com.app.dailyjounral.widget.RobotoRegularText>

                <com.app.dailyjounral.widget.TypefaceEditText
                    android:id="@+id/edt_ConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_text"
                    android:textSize="@dimen/_12ssp"
                    android:drawableTint="@color/top_header_color"
                    android:background="@drawable/round_shape_edittext"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/icon_lock"
                    android:paddingStart="@dimen/_10ssp"
                    android:drawablePadding="@dimen/_10ssp"
                    android:padding="@dimen/_8ssp"
                    android:layout_marginTop="@dimen/_5ssp"
                    app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordLabel"
                    tools:ignore="RtlSymmetry">

                </com.app.dailyjounral.widget.TypefaceEditText>


                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cornerRadius="@dimen/_5ssp"
                    android:layout_marginTop="@dimen/_30ssp"
                    app:layout_constraintTop_toBottomOf="@+id/edt_ConfirmPassword"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/submit">
                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
